[gd_scene load_steps=15 format=4 uid="uid://cj6k5trm8fxv"]

[ext_resource type="Script" uid="uid://cp54mgi54nywo" path="res://scenes/game_logic/fill_game_logic.gd" id="1_fqmn3"]
[ext_resource type="Resource" uid="uid://canows7occ53y" path="res://scenes/quests/story_quests/memoirs_of_caelus/2_combat/combat_components/memoirs_of_caelus_combat.dialogue" id="2_wdeo7"]
[ext_resource type="TileSet" uid="uid://07fq3rspk8ia" path="res://scenes/tileset.tres" id="3_q13jx"]
[ext_resource type="PackedScene" uid="uid://iu2q66clupc6" path="res://scenes/game_elements/characters/player/player.tscn" id="4_s1vfa"]
[ext_resource type="SpriteFrames" uid="uid://bqikydog4ynkm" path="res://scenes/quests/story_quests/memoirs_of_caelus/player_components/memoirs_of_caelus_player.tres" id="5_ykhdl"]
[ext_resource type="PackedScene" uid="uid://b82nsrh332syj" path="res://scenes/game_elements/characters/enemies/throwing_enemy/throwing_enemy.tscn" id="6_jsduh"]
[ext_resource type="SpriteFrames" uid="uid://cfa1icstb6tiu" path="res://scenes/quests/story_quests/memoirs_of_caelus/2_combat/combat_components/memoirs_of_caelus_throwing_enemy.tres" id="7_vwymx"]
[ext_resource type="SpriteFrames" uid="uid://bt56j1dd4t0ca" path="res://scenes/quests/story_quests/memoirs_of_caelus/2_combat/combat_components/memoirs_of_caelus_projectile_spriteframes.tres" id="8_d8x4f"]
[ext_resource type="PackedScene" uid="uid://y8ha8abfyap2" path="res://scenes/game_elements/props/filling_barrel/filling_barrel.tscn" id="9_qv2hd"]
[ext_resource type="SpriteFrames" uid="uid://bymaw4l6n1cee" path="res://scenes/quests/story_quests/memoirs_of_caelus/2_combat/combat_components/memoirs_of_caelus_target_spriteframes.tres" id="10_mcjp7"]
[ext_resource type="PackedScene" uid="uid://fuhl3l6gxq5k" path="res://scenes/game_elements/props/collectible_item/collectible_item.tscn" id="11_2su87"]
[ext_resource type="Script" uid="uid://bgmwplmj3bfls" path="res://scenes/globals/game_state/inventory/inventory_item.gd" id="12_pt6ni"]
[ext_resource type="PackedScene" uid="uid://cfcgrfvtn04yp" path="res://scenes/ui_elements/hud/hud.tscn" id="13_x6w5m"]

[sub_resource type="Resource" id="Resource_5fmev"]
script = ExtResource("12_pt6ni")
type = 1
metadata/_custom_type_script = "uid://bgmwplmj3bfls"

[node name="Combat" type="Node2D"]
y_sort_enabled = true

[node name="FillGameLogic" type="Node" parent="."]
script = ExtResource("1_fqmn3")
intro_dialogue = ExtResource("2_wdeo7")
metadata/_custom_type_script = "uid://cp54mgi54nywo"

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="Grass" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAANAAcAAQABAAEAAAANAAYAAQABAAEAAAANAAUAAQABAAEAAAANAAQAAQABAAEAAAANAAMAAQABAAEAAAANAAIAAQABAAEAAAANAAEAAQABAAEAAAAMAAcAAQABAAEAAAAMAAYAAQABAAEAAAAMAAUAAQABAAEAAAAMAAQAAQABAAEAAAAMAAMAAQABAAEAAAAMAAIAAQABAAEAAAAMAAEAAQABAAEAAAALAAcAAQABAAEAAAALAAYAAQABAAEAAAALAAUAAQABAAEAAAALAAQAAQABAAEAAAALAAMAAQABAAEAAAALAAIAAQABAAEAAAALAAEAAQABAAEAAAAKAAcAAQABAAEAAAAKAAYAAQABAAEAAAAKAAUAAQABAAEAAAAKAAQAAQABAAEAAAAKAAMAAQABAAEAAAAKAAIAAQABAAEAAAAKAAEAAQABAAEAAAAJAAcAAQABAAEAAAAJAAYAAQABAAEAAAAJAAUAAQABAAEAAAAJAAQAAQABAAEAAAAJAAMAAQABAAEAAAAJAAIAAQABAAEAAAAJAAEAAQABAAEAAAAIAAcAAQABAAEAAAAIAAYAAQABAAEAAAAIAAUAAQABAAEAAAAIAAQAAQABAAEAAAAIAAMAAQABAAEAAAAIAAIAAQABAAEAAAAIAAEAAQABAAEAAAAHAAcAAQABAAEAAAAHAAYAAQABAAEAAAAHAAUAAQABAAEAAAAHAAQAAQABAAEAAAAHAAMAAQABAAEAAAAHAAIAAQABAAEAAAAHAAEAAQABAAEAAAAGAAcAAQABAAEAAAAGAAYAAQABAAEAAAAGAAUAAQABAAEAAAAGAAQAAQABAAEAAAAGAAMAAQABAAEAAAAGAAIAAQABAAEAAAAFAAcAAQABAAEAAAAFAAYAAQABAAEAAAAFAAUAAQABAAEAAAAFAAQAAQABAAEAAAAFAAMAAQABAAEAAAAFAAIAAQABAAEAAAAFAAEAAQABAAEAAAAEAAcAAQABAAEAAAAEAAYAAQABAAEAAAAEAAUAAQABAAEAAAAEAAQAAQABAAEAAAAEAAMAAQABAAEAAAAEAAIAAQABAAEAAAAEAAEAAQABAAEAAAADAAcAAQABAAEAAAADAAYAAQABAAEAAAADAAUAAQABAAEAAAADAAQAAQABAAEAAAADAAMAAQABAAEAAAADAAIAAQABAAEAAAADAAEAAQABAAEAAAACAAcAAQABAAEAAAACAAYAAQABAAEAAAACAAUAAQABAAEAAAACAAMAAQABAAEAAAACAAIAAQABAAEAAAACAAEAAQABAAEAAAABAAcAAQABAAEAAAABAAYAAQABAAEAAAABAAUAAQABAAEAAAABAAMAAQABAAEAAAABAAIAAQABAAEAAAABAAEAAQABAAEAAAACAAQAAQABAAEAAAABAAQAAQABAAEAAAAAAAQAAQABAAEAAAAAAAUAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAAGAAAAAQABAAEAAAAGAAEAAQABAAEAAAAHAAAAAQABAAEAAAAFAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAALAAAAAQABAAEAAAAMAAAAAQABAAEAAAAKAAAAAQABAAEAAAANAAAAAQABAAEAAAAEAAAAAQABAAEAAAADAAAAAQABAAEAAAACAAAAAQABAAEAAAABAAAAAQABAAEAAAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAgAAQABAAEAAAABAAgAAQABAAEAAAACAAgAAQABAAEAAAADAAgAAQABAAEAAAAEAAgAAQABAAEAAAAFAAgAAQABAAEAAAAGAAgAAQABAAEAAAAHAAgAAQABAAEAAAAIAAgAAQABAAEAAAAJAAgAAQABAAEAAAAKAAgAAQABAAEAAAAMAAgAAQABAAEAAAALAAgAAQABAAEAAAANAAgAAQABAAEAAAAOAAgAAQABAAEAAAAOAAcAAQABAAEAAAAOAAYAAQABAAEAAAAOAAUAAQABAAEAAAAOAAQAAQABAAEAAAAOAAMAAQABAAEAAAAOAAIAAQABAAEAAAAOAAEAAQABAAEAAAAOAAAAAQABAAEAAAA=")
tile_set = ExtResource("3_q13jx")

[node name="Stones" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAAGAAkABAABAAUAAAAHAAkABAABAAUAAAAIAAkABAABAAUAAAAJAAkABAABAAUAAAAKAAkABAABAAUAAAALAAkABAABAAUAAAAMAAkABAABAAUAAAANAAkABAABAAUAAAAOAAkABAABAAUAAAAGAAgABAABAAQAAAAHAAgABAABAAQAAAAIAAgABAABAAQAAAAJAAgABAABAAQAAAAKAAgABAABAAQAAAALAAgABAABAAQAAAAMAAgABAABAAQAAAANAAgABAABAAQAAAAOAAgABAABAAQAAAAAAAEABAACAAEAAAABAAEABAABAAMAAAACAAEABAABAAUAAAACAAAABAABAAQAAAABAAAABAABAAIAAAAAAAAABAABAAEAAAADAAAABAABAAIAAAAFAAAABAACAAIAAAAEAAAABAABAAEAAAAEAAEABAABAAMAAAAFAAEABAABAAUAAAADAAEABAABAAUAAAANAAcABAAAAAEAAAAOAAcABAABAAEAAAANAAYABAAAAAAAAAAOAAYABAABAAEAAAAOAAUABAAAAAEAAAAOAAMABAAAAAEAAAAOAAIABAABAAEAAAANAAEABAAAAAEAAAANAAAABAABAAAAAAAOAAAABAABAAAAAAAOAAEABAABAAEAAAAOAAQABAAAAAEAAAAMAAAABAABAAAAAAALAAAABAABAAAAAAAKAAAABAABAAAAAAAJAAAABAABAAAAAAAIAAAABAABAAAAAAAHAAAABAAAAAEAAAANAAIABAAAAAIAAAANAAMABAAAAAMAAAAHAAEABAABAAMAAAAIAAEABAABAAUAAAAKAAEABAABAAUAAAALAAEABAABAAUAAAAJAAEABAABAAMAAAAMAAEABAABAAMAAAAGAAAABAABAAIAAAAGAAEABAABAAMAAAAAAAkABAABAAUAAAABAAkABAABAAUAAAACAAkABAABAAUAAAADAAkABAABAAUAAAAEAAkABAABAAUAAAAFAAkABAABAAUAAAAAAAgABAABAAQAAAABAAgABAABAAQAAAACAAgABAABAAQAAAADAAgABAABAAQAAAAEAAgABAABAAQAAAAFAAgABAABAAQAAAAAAAIABAACAAEAAAAAAAMABAACAAEAAAAAAAQABAACAAEAAAAAAAcABAACAAEAAAAAAAYABAACAAEAAAAAAAUABAACAAEAAAA=")
tile_set = ExtResource("3_q13jx")

[node name="OnTheGround" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="OnTheGround" instance=ExtResource("4_s1vfa")]
position = Vector2(348, 335)
sprite_frames = ExtResource("5_ykhdl")

[node name="ThrowingNPC" parent="OnTheGround" instance=ExtResource("6_jsduh")]
position = Vector2(857, 300)
sprite_frames = ExtResource("7_vwymx")
projectile_sprite_frames = ExtResource("8_d8x4f")

[node name="Target" parent="OnTheGround" instance=ExtResource("9_qv2hd")]
position = Vector2(502, 164)
sprite_frames = ExtResource("10_mcjp7")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target2" parent="OnTheGround" instance=ExtResource("9_qv2hd")]
position = Vector2(758, 164)
sprite_frames = ExtResource("10_mcjp7")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target3" parent="OnTheGround" instance=ExtResource("9_qv2hd")]
position = Vector2(761, 497)
sprite_frames = ExtResource("10_mcjp7")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target4" parent="OnTheGround" instance=ExtResource("9_qv2hd")]
position = Vector2(632, 497)
sprite_frames = ExtResource("10_mcjp7")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target5" parent="OnTheGround" instance=ExtResource("9_qv2hd")]
position = Vector2(633, 164)
sprite_frames = ExtResource("10_mcjp7")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target6" parent="OnTheGround" instance=ExtResource("9_qv2hd")]
position = Vector2(501, 497)
sprite_frames = ExtResource("10_mcjp7")
label = ""
color = Color(1, 1, 1, 1)

[node name="CollectibleItem" parent="OnTheGround" instance=ExtResource("11_2su87")]
unique_name_in_owner = true
position = Vector2(868, 303)
revealed = false
next_scene = "uid://oh8vj5jo00iy"
item = SubResource("Resource_5fmev")
collected_dialogue = ExtResource("2_wdeo7")
dialogue_title = &"well_done"

[node name="ScreenOverlay" type="CanvasLayer" parent="."]

[node name="HUD" parent="." instance=ExtResource("13_x6w5m")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.333, 1.333)
limit_left = 0
limit_top = 0
limit_right = 2048
limit_bottom = 2048
position_smoothing_enabled = true
editor_draw_limits = true

[connection signal="goal_reached" from="FillGameLogic" to="OnTheGround/CollectibleItem" method="reveal"]
